@@ -73,6 +73,7 @@ Version 0.24.0:
 - Bsave()'s length parameter wasn't unsigned like in the gfxlib
 - Win32 ScreenControl GET_WINDOW_POS with minimized window could cause it to be locked up that way
 - "array too big for stack" warning was shown for static arrays
+- ScreenRes was truncating the screen's text width/height (columns/rows) to 0..255, causing incorrect Print'ing or even a division-by-zero crash during Print
 
 
 Version 0.23.0:
